# Python_coder_LLM

./: .python-version  Dataset_codeparrot.py  main.py  pyproject.toml  requirements.txt  tokenization.py
tokenizer/: merges.txt  vocab.json
