[project]
name = "python-coder-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=4.0.0",
    "numpy>=2.2.6",
    "rich>=14.1.0",
    "scipy>=1.15.3",
    "tokenizers>=0.21.4",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.0",
    "wandb>=0.21.0",
]
